# say

./: .gitignore  CMakeLists.txt  README.html  README.md  SyncFork.sh
src/say/: init.lua
